Commented, improved, and corrected several positions marked by Nico in his previous commit within the ASTNode class.
Updated JavaDoc: some package-info.java files and within ASTNode.

Updated the Type Hierarchy graph about JSBML and changed the User Guide accordingly; also updated the Acknowledgments section in the User Guide.